--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> 자료 제작 매크로 </title>
-  <link rel="icon" href="C:\Users\1153g\Desktop\workbookmaker">
+  <link rel="icon" href="C:\Users\1153g\Desktop\workbookmaker\favicon.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
