--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="p-6 md:p-8">
                         <div id="guide-split" class="tab-content active">
                             <h4 class="text-xl font-bold text-indigo-600 mb-4">문장 넘버링 예시</h4>
-                            <p class="mb-6 text-gray-700">입력한 지문을 문장 단위로 자동 분리하고, 선택한 형식의 번호를 붙여줍니다. '제목 포함하기'를 체크하면 문제 번호 등을 함께 넣을 수 있습니다.</p>
+                            <p class="mb-6 text-gray-700">지문을 문장 단위로 자동 분리하고, 순서대로 번호를 붙여줍니다. '제목 포함하기'를 체크하면 문제 번호 등을 함께 넣을 수 있습니다.</p>
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <h5 class="font-semibold mb-2 text-gray-800">✍️ 입력 예시</h5>
@@ -138,7 +138,7 @@
             
                         <div id="guide-sequence" class="tab-content hidden">
                              <h4 class="text-xl font-bold text-indigo-600 mb-4">순서 배열 예시</h4>
-                            <p class="mb-6 text-gray-700">지문을 문장 단위로 나눈 뒤, 문장 순서를 무작위로 섞어 순서 배열 문제를 만듭니다. '제목 포함하기'를 체크하면 문제 번호 등을 함께 넣을 수 있습니다.</p>
+                            <p class="mb-6 text-gray-700">지문을 문장 단위로 나눈 뒤, 순서를 무작위로 섞어 순서배열 문제를 만듭니다. '제목 포함하기'를 체크하면 문제 번호 등을 함께 넣을 수 있습니다.</p>
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <h5 class="font-semibold mb-2 text-gray-800">✍️ 입력 예시</h5>
@@ -165,7 +165,7 @@
             
                         <div id="guide-wordOrder" class="tab-content hidden">
                              <h4 class="text-xl font-bold text-indigo-600 mb-4">어순 배열 예시</h4>
-                            <p class="mb-6 text-gray-700">지문을 문장 단위로 나눈 뒤, 각 문장의 단어 순서를 무작위로 섞어 어순 배열 문제를 만듭니다. '해설 포함하기'를 체크하고 각 문장에 맞는 우리말 해석을 입력하면 문제에 함께 표시됩니다.</p>
+                            <p class="mb-6 text-gray-700">지문을 문장 단위로 나눈 뒤, 각 문장의 단어 순서를 무작위로 섞어 어순배열 문제를 만듭니다. '해설 포함하기'를 체크하고 각 문장에 맞는 우리말 해석을 입력하면 문제에 함께 표시됩니다.</p>
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <h5 class="font-semibold mb-2 text-gray-800">✍️ 입력 예시</h5>
