--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="home" class="screen w-full h-full flex items-center justify-center p-4">
             <div class="w-full max-w-6xl animate-fade-in">
                 <div class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-HakgyoansimAllim text-gray-800 mb-3 tracking-tight">뚝딱 워크북 🛠️</h1>
+                    <h1 class="text-4xl md:text-5xl font-HakgyoansimAllim text-gray-800 mb-3 tracking-tight">워크북 MAKER 🛠️</h1>
                     <p class="text-lg text-gray-600">원하는 기능을 선택하고 학습 자료를 만들어보세요</p>
                     <button onclick="openGuideModal()" class="btn btn-secondary mt-6">📖 사용법 보기</button>
                 </div>
